# DSA-in-practice

./: Find the Middle of Linked List.cpp  Intersection of two linkedList.cpp  Remove n-th node from end of linkedList.cpp  Reverse_Linked_List.cpp
Array(Striver sheet) Part-1/: Kadane's Algorithm.cpp  Next_Permutation.cpp  Pascal's Triangle.cpp  Set Matrix Zeros.cpp  Sort Colors.cpp  Stock Buy and sell .cpp  rec_array_sorted.cpp
LINKED-LIST/: Add Two Numbers as Linked List.cpp  CMakeLists.txt  Delete Node in a Linked List.cpp  Merge two sorted LinedList.cpp
MAP:HASHMAP/: GroupAnagram.cpp  Groupanagram frequency string.cpp  K_Most_frequentNumber.cpp
