cmake_minimum_required(VERSION 3.31)
project(LINKED_LIST)

set(CMAKE_CXX_STANDARD 20)

add_executable(LINKED_LIST
        Reverse_Linked_List.cpp
        "Find the Middle of Linked List.cpp"
        "Merge two sorted LinedList.cpp"
        "Intersection of two linkedList.cpp"
        "Remove n-th node from end of linkedList.cpp"
        "Add Two Numbers as Linked List.cpp"
        "Delete Node in a Linked List.cpp")
